--- a/app/assets/style/app.scss
+++ b/app/assets/style/app.scss
@@ -76,9 +76,7 @@ body[data-platform=darwin] {
   transition:0.4s ease filter;
 }
 
-.CodeMirror-sizer {
-  margin-left:0 !important;
-}
+
 
 .CodeMirror {
   padding: 3rem 0 4rem;
